2001-08-03  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (libbonobo_post_args_parse): Initialize the
	config databases in an idle handler as this will improve the
	startup time of the application.

2001-08-03  Martin Baulig  <baulig@suse.de>

	* Makefile.am: Create gnomesoundplugin_csl.la and install it
	in $(libdir)/gnome-2.0/sound-plugins/ if we have CSL.

	* gnome-sound.[ch]: The new GNOME Sound API.

	* gnome-sound-csl.c: This is the sound plugin module for CSL.

	* test-sound.c: New file.

2001-08-01  Martin Baulig  <baulig@suse.de>

	* gnome-paper.[ch]: Removed.

2001-07-31  Martin Baulig  <baulig@suse.de>

	* gnome-marshal.list: Removed everything which is not currently used:
	VOID:DOUBLE, VOID:UINT, VOID:STRING,INT, VOID:STRING,INT,BOXED,
	VOID:STRING,INT,UINT, VOID:POINTER,INT,BOOLEAN, VOID:STRING,BOXED,
	VOID:STRING,BOOLEAN,BOXED, ENUM:VOID, BOOLEAN:OBJECT, POINTER:INT,INT,
	POINTER:BOOLEAN, POINTER:VOID, POINTER:POINTER, STRING:VOID.

2001-07-31  Martin Baulig  <baulig@suse.de>

	* gnome-ditem.[ch]: Removed. This will be moved to gnome-core when George is
	back from his holidays.

2001-07-27  Martin Baulig  <baulig@suse.de>

	* libgnome-marshal.list: VOID:STRING,INT,UINT,BOXED -> VOID:STRING,INT,UINT.
	VOID:POINTER,INT,BOOLEAN,BOXED -> VOID:POINTER,INT,BOOLEAN,BOXED.

2001-07-16  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (GNOME_PARAM_CONFIG_MONIKER): Default to "config:";
	you don't need to set this property unless you have a reason to do so.
	(GNOME_PARAM_DESKTOP_CONFIG_MONIKER): Default to "config:/gnome/desktop/".
	No need to set this property.

2001-07-11  Martin Baulig  <baulig@suse.de>

	* libgnome-init.c (gnome_mime_type): Removed.

2001-07-09  Michael Meeks  <michael@ximian.com>

	* Makefile.am (libgnome_headers): remove gnome-regex.[ch]

2001-07-04  Michael Meeks  <michael@ximian.com>

	* Makefile.am: remove gnome-fileconvert.[ch]

	* libgnome/gnome-fileconvert.[ch]: remove.
